product page cleanup

--- a/js/templates/ProductTemplate.html
+++ b/js/templates/ProductTemplate.html
@@ -1,12 +1,10 @@
 <div class='container'>
   <div class='row'>
     <span class='span8' id='product_main'>
-
       <div class='product_intro row'>
         <h2 class='span8'>Ut enim ad minim veniam, quis</h2>
         <p class='span8'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis.</p>
       </div>
-
       <div class='visible-desktop visible-tablet hidden-phone'>
         <ul class='thumbnails row'>
           <li class='span6'>
@@ -15,66 +13,20 @@
             </a>
           </li>
 
-         <li class='span2'>
-          <h3>Related products:</h3>
-          <li>
           <li class='span2'>
-            <a class='thumbnail' href='#'>
-              <img src={{related1}} />
-            </a>
-          </li>
-
-          <li class='span2'>
-            <a class='thumbnail' href='#'>
-              <img src={{related2}} />
-            </a>
-          </li>
-
-          <li class='span2'>
-            <a class='thumbnail' href='#'>
-              <img src={{related3}} />
-            </a>
-          </li>
-
-        </ul>
-
-      </div>
-
-      <div class='visible-iphone hidden-desktop hidden-tablet'>
-        <ul class='thumbnails row'>
-          <li class='span6'>
-            <a href='http://lorempixel.com/1200/800/fashion/6/Laboop%20Ecommerce/' class='thumbnail cloud-zoom'  rel='adjustX: 36, adjustY:0'>
-              <img src='http://lorempixel.com/1200/800/fashion/6/Laboop%20Ecommerce/' alt=''>
-            </a>
+            <h3>Related products:</h3>
+            <li class='span2'>
+              <a class='thumbnail' href='#'><img src={{related1}} /></a>
+            </li>
+            <li class='span2'>
+              <a class='thumbnail' href='#'><img src={{related2}} /></a>
+            </li>
+            <li class='span2'>
+              <a class='thumbnail' href='#'><img src={{related3}} /></a>
+            </li>
           </li>
         </ul>
-      </div>
-
-    </span>
-
-    <span class='span3 offset1' id='product_side'>
-      <form>
-        <h3>Sizes</h3>
-        <select>
-          <option>S</option>
-          <option>M</option>
-        </select>
-        <h3>Colors</h3>
-        <ul class='unstyled' id='product_colors'>
-          <li><span></span></li>
-          <li><span></span></li>
-          <li><span></span></li>
-        </ul>
-        <!--<button type='submit' class='btn btn_large'>Add to bag</button>-->
-      </form>
-      <div id='pruduct_share'>
-        <span class='st_sharethis_large' displayText='ShareThis'></span>
-        <span class='st_facebook_large' displayText='Facebook'></span>
-        <span class='st_twitter_large' displayText='Tweet'></span>
-        <span class='st_pinterest_large' displayText='Pinterest'></span>
-        <span class='st_email_large' displayText='Email'></span>
       </div>
     </span>
-
   </div>
 </div>
