moved aboutus page into separate view/template made cloud zoom work on product page

--- a/js/templates/ProductTemplate.html
+++ b/js/templates/ProductTemplate.html
@@ -5,12 +5,10 @@
         <h2 class='span8'>Ut enim ad minim veniam, quis</h2>
         <p class='span8'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis.</p>
       </div>
-      <div class='visible-desktop visible-tablet hidden-phone'>
+      <div>
         <ul class='thumbnails row'>
           <li class='span6'>
-            <a class='thumbnail cloud-zoom' id='zoom1' rel='adjustX: 36, adjustY:0'>
-              <img src={{imgSrc}} width=556px />
-            </a>
+            <a class='thumbnail cloud-zoom' id='zoom1' rel='adjustX: 36, adjustY:0'></a>
           </li>
 
           <li class='span2'>
