--- a/js/templates/HeaderTemplate.html
+++ b/js/templates/HeaderTemplate.html
@@ -7,9 +7,9 @@
       <div class='nav-collapse'>
         <ul class='nav' id='header_menu'>
           <li><a href='#men'>MEN</a></li>
-          <li><a href='women.html'>WOMEN</a></li>
-          <li><a href='#'>BAGS</a></li>
-          <li><a href='#'>ACCESORIES</a></li>
+          <li><a style='color:lightgrey'>WOMEN</a></li>
+          <li><a style='color:lightgrey'>BAGS</a></li>
+          <li><a style='color:lightgrey'>ACCESORIES</a></li>
         </ul>
       </div>
     </div>
