agllery template update

--- a/js/templates/GalleryTemplate.html
+++ b/js/templates/GalleryTemplate.html
@@ -6,7 +6,7 @@
         <div class='thumbnail'>
           <img src="img/DSC_0.jpeg" />
           <div class='caption'>
-            <h5>Thumbnail label <strong>€ 400</strong></h5>
+            <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
           </div>
         </div>
@@ -16,7 +16,7 @@
         <div class='thumbnail'>
           <img src="img/DSC_1.jpeg" />
           <div class='caption'>
-            <h5>Thumbnail label <strong>€ 400</strong></h5>
+            <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
           </div>
         </div>
@@ -26,7 +26,7 @@
         <div class='thumbnail'>
           <img src="img/DSC_2.jpeg" />
           <div class='caption'>
-            <h5>Thumbnail label <strong>€ 400</strong></h5>
+            <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
           </div>
         </div>
@@ -36,7 +36,7 @@
         <div class='thumbnail'>
           <img src="img/DSC_3.jpeg" />
           <div class='caption'>
-            <h5>Thumbnail label <strong>€ 400</strong></h5>
+            <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
           </div>
         </div>
@@ -48,7 +48,7 @@
         <div class='thumbnail'>
           <img src="img/DSC_4.jpeg" />
           <div class='caption'>
-            <h5>Thumbnail label <strong>€ 400</strong></h5>
+            <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
           </div>
         </div>
@@ -58,7 +58,7 @@
         <div class='thumbnail'>
           <img src="img/DSC_5.jpeg" />
           <div class='caption'>
-            <h5>Thumbnail label <strong>€ 400</strong></h5>
+            <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
           </div>
         </div>
@@ -68,7 +68,7 @@
         <div class='thumbnail'>
           <img src="img/DSC_3.jpeg" />
           <div class='caption'>
-            <h5>Thumbnail label <strong>€ 400</strong></h5>
+            <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
           </div>
         </div>
@@ -78,7 +78,7 @@
         <div class='thumbnail'>
           <img src="img/DSC_4.jpeg" />
           <div class='caption'>
-            <h5>Thumbnail label <strong>€ 400</strong></h5>
+            <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
           </div>
         </div>
