--- a/js/templates/FooterTemplate.html
+++ b/js/templates/FooterTemplate.html
@@ -1,4 +1,43 @@
-<div class='container'>
+<div class='padding-wrapper'>
+  <div class='container'>
+    <div class='row'>
+      <div class='span6'>
+        <div class='footer-heading'>
+          <a class='brand' href='index.html'>Velocity Trendz</a>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi posuere nisl at eros accumsan ultrices.
+          Integer id justo mi. Sed eleifend dolor posuere justo dignissim rhoncus.
+        </p>
+        <p>
+          Etiam rutrum orci nec sapien lobortis ac consectetur nisl laoreet. Duis egestas enim at ante dignissim
+          id elementum nisi convallis.
+        </p>
+      </div>
+
+      <div class='span2'>&nbsp;</div>
+      <div class='span3 span-contact'>
+        <div class='footer-heading'>
+          <h3>Quick Contact</h3>
+        </div>
+        <div class='footer-contact'>
+          <div class='contact'>
+            <img class='hidden-phone' src='img/envelope.png' alt='Contact Email'/>
+            <p><a href='mailto:info@corporatus.com'>info@velocitytrendz.com</a></p>
+          </div>
+          <div class='contact address'>
+            <img class='hidden-phone' src='img/house.png' alt='Contact Address'/>
+            <div class='address'>
+              12 Sweet Street, <br /> Des Moines, IA
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--<div class='container'>
   <div class='row'>
     <span class='span10' id='footer_links'>
       <ul class='unstyled'>
@@ -14,4 +53,4 @@
       </ul>
     </span>
   </div>
-</div>
+</div>-->
