--- a/js/templates/ProductTemplate.html
+++ b/js/templates/ProductTemplate.html
@@ -12,15 +12,15 @@
           </li>
 
           <li class='span2'>
-            <h3>Related products:</h3>
+            <b>Related products:</b>
             <li class='span2'>
-              <a class='thumbnail' href='#'><img src={{related1}} /></a>
+              <a class='thumbnail'><img src={{related1}} /></a>
             </li>
             <li class='span2'>
-              <a class='thumbnail' href='#'><img src={{related2}} /></a>
+              <a class='thumbnail'><img src={{related2}} /></a>
             </li>
             <li class='span2'>
-              <a class='thumbnail' href='#'><img src={{related3}} /></a>
+              <a class='thumbnail'><img src={{related3}} /></a>
             </li>
           </li>
         </ul>
