--- a/js/templates/HeaderTemplate.html
+++ b/js/templates/HeaderTemplate.html
@@ -1,17 +1,15 @@
 <div class='container'>
   <div class='row'>
     <div class='span3'>
-      <a href='index.html' style='font-size:36px'><img src='img/logo.jpg' width='220px' alt='img1' /></a>
+      <a href='#' style='font-size:36px'><img src='img/logo.jpg' width='220px' alt='img1' /></a>
     </div>
-    <div class='span8'>
-      <div class='nav-collapse'>
-        <ul class='nav' id='header_menu'>
+    <div class='span9'>
+        <ul class='nav pull-right' id='header_menu'>
           <li><a href='#men'>MEN</a></li>
           <li><a>WOMEN</a></li>
           <li><a>BAGS</a></li>
           <li><a>ACCESORIES</a></li>
         </ul>
-      </div>
     </div>
   </div>
 </div>
