--- a/js/templates/HomeTemplate.html
+++ b/js/templates/HomeTemplate.html
@@ -1,141 +1,40 @@
 <div class='container'>
-  <div class="row">
-    <div class="span8">
-      <h3 style='padding-left:65px'>What You'll Get</h3><br>
-      <ul class="features-list">
-        <li class="feature">
-          <div class="feature-thumbnail">
-            <div class="circle-icon">
-              <div>
-                <i class="icon-list-alt"></i>
-              </div>
-            </div> <!-- /circle-icon -->
-          </div> <!-- /feature-thumbnail -->
-
-          <div class="feature-content">
-            <h3>Feature #1</h3>
-            <p>Nunc metus ligula, fringilla quis porta ut, tellus arcu  mi eget adipiscing dictum ut turpis. Aliquam eget odio.</p>
-          </div> <!-- /feature-content -->
-        </li>
-        <li class="feature">
-          <div class="feature-thumbnail">
-            <div class="circle-icon">
-              <div>
-                <i class="icon-flag"></i>
-              </div>
-            </div> <!-- /circle-icon -->
-          </div> <!-- /feature-thumbnail -->
-
-          <div class="feature-content">
-            <h3>Feature #2</h3>
-            <p>Vestibulum ante ipsum primis tellus arcu  mi eget adipiscing in faucibus orci luctus et ultrices posuere cubilia curae.</p>
-          </div> <!-- /feature-content -->
-        </li>
-        <li class="feature">
-          <div class="feature-thumbnail">
-            <div class="circle-icon">
-              <div>
-                <i class="icon-resize-small"></i>
-              </div>
-            </div> <!-- /circle-icon -->
-          </div> <!-- /feature-thumbnail -->
-
-          <div class="feature-content">
-            <h3>Feature #3</h3>
-            <p>Aliquam justo massa, rhoncus quis tellus arcu  mi eget adipiscing suscipit eget, malesuada vel nulla. Sed ac nunc.</p>
-          </div> <!-- /feature-content -->
-        </li>
-        <li class="feature">
-          <div class="feature-thumbnail">
-            <div class="circle-icon">
-              <div>
-                <i class="icon-tint"></i>
-              </div>
-            </div> <!-- /circle-icon -->
-          </div> <!-- /feature-thumbnail -->
-
-          <div class="feature-content">
-            <h3>Feature #4</h3>
-            <p>Phasellus mollis, tortor vitae ornare commodo, augue tellus arcu  mi eget adipiscing risus varius quam, sit amet.</p>
-          </div> <!-- /feature-content -->
-        </li>
-        <li class="feature">
-          <div class="feature-thumbnail">
-            <div class="circle-icon">
-              <div>
-                <i class="icon-trophy"></i>
-              </div>
-            </div> <!-- /circle-icon -->
-          </div> <!-- /feature-thumbnail -->
-
-          <div class="feature-content">
-            <h3>Feature #5</h3>
-            <p>Sed feugiat pellentesque tellus arcu  mi eget adipiscing dui, laoreet aliquet enim condimentum quis commodo.</p>
-          </div> <!-- /feature-content -->
-        </li>
-        <li class="feature">
-          <div class="feature-thumbnail">
-            <div class="circle-icon">
-              <div>
-                <i class="icon-file"></i>
-              </div>
-            </div> <!-- /circle-icon -->
-          </div> <!-- /feature-thumbnail -->
-
-          <div class="feature-content">
-            <h3>Feature #6</h3>
-            <p>Phasellus varius sapien id ante ultrices eu malesuada mauris molestie. Cras erat tellus arcu  mi eget adipiscing quam.</p>
-          </div> <!-- /feature-content -->
-        </li>
-      </ul> <!-- /features-list -->
-    </div> <!-- /span8 -->
-    <div class="span4">
-      <h3> Testimonials</h3><br>
-      <ul class="testimonials-list">
-        <li>
-          <div class="testimonial-avatar">
-            <div class="img">
-              <img src="http://wbpreview.com/previews/WB000C138/img/avatar.png" alt="Thumbnail" />
-            </div>
-          </div> <!-- /testimonial-avatar -->
-          <div class="testimonial-text">
-            <p>
-              <span class="testimonial-author">John Doe</span>
-              Morbi a tellus tellus. Integer et ipsum ipsum, blandit pharetra nisl. In vitae lorem a magna.
-            </p>
-          </div> <!-- /testimonial-text -->
-        </li>
-        <li>
-          <div class="testimonial-avatar">
-            <div class="img">
-              <img src="http://wbpreview.com/previews/WB000C138/img/avatar2.png" alt="Thumbnail" />
-            </div>
-          </div> <!-- /testimonial-avatar -->
-
-          <div class="testimonial-text">
-            <p>
-              <span class="testimonial-author">John Doe</span>
-              Morbi a tellus tellus. Integer et ipsum ipsum, blandit pharetra nisl. In vitae lorem a magna.
-
-            </p>
-          </div> <!-- /testimonial-text -->
-        </li>
-        <li>
-          <div class="testimonial-avatar">
-            <div class="img">
-              <img src="http://wbpreview.com/previews/WB000C138/img/avatar3.png" alt="Thumbnail" />
-            </div>
-          </div> <!-- /testimonial-avatar -->
-
-          <div class="testimonial-text">
-            <p>
-              <span class="testimonial-author">John Doe</span>
-              Morbi a tellus tellus. Integer et ipsum ipsum, blandit pharetra nisl. In vitae lorem a magna.
-
-            </p>
-          </div> <!-- /testimonial-text -->
-        </li>
-      </ul>
-    </div> <!-- /span4 -->
-  </div> <!-- /row -->
+  <div class='header-padding hidden-phone hidden-tablet'>&nbsp;</div>
+  <div class='row'>
+    <div class='span4'>
+      <div class='padding-wrapper'>
+        <div id='camera_wrap' class='camera_wrap'>
+          <div data-src='img/slides/DSC_0.jpeg' data-thumb='img/slides/DSC_0.jpeg'>
+            <div class='camera_caption'>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+          </div>
+          <div data-src='img/slides/DSC_1.jpeg' data-thumb='img/slides/DSC_1.jpeg'>
+            <div class='camera_caption'>Donec tellus augue, varius nec malesuada ut, facilisis ac quam.</div>
+          </div>
+          <div data-src='img/slides/DSC_2.jpeg' data-thumb='img/slides/DSC_2.jpeg'>
+            <div class='camera_caption'>Nullam leo quam, aliquam vel egestas ac, ornare in augue.</div>
+          </div>
+          <div data-src='img/slides/DSC_3.jpeg' data-thumb='img/slides/DSC_3.jpeg'>
+            <div class='camera_caption'>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+          </div>
+          <div data-src='img/slides/DSC_4.jpeg' data-thumb='img/slides/DSC_4.jpeg'>
+            <div class='camera_caption'>Donec tellus augue, varius nec malesuada ut, facilisis ac quam.</div>
+          </div>
+          <div data-src='img/slides/DSC_5.jpeg' data-thumb='img/slides/DSC_5.jpeg'>
+            <div class='camera_caption'>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+          </div>
+          <div data-src='img/slides/DSC_1.jpeg' data-thumb='img/slides/DSC_1.jpeg'>
+            <div class='camera_caption'>Donec tellus augue, varius nec malesuada ut, facilisis ac quam.</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class='span1' style='height:1px'></div>
+    <div class='span3' style='margin-right:45px'>
+      <img class='thumbnail' src='img/220x150.gif' alt='Placeholder Image' />
+    </div>
+    <div class='span1' style='height:1px'></div>
+    <div class='span3'>
+      <img class='thumbnail' src='img/220x150.gif' alt='Placeholder Image' />
+    </div>
+  </div>
 </div>
