persistent header selection

--- a/js/templates/HeaderTemplate.html
+++ b/js/templates/HeaderTemplate.html
@@ -5,6 +5,7 @@
     </div>
     <div class='span9'>
         <ul class='nav pull-right' id='header_menu'>
+          <li><a href='#'>HOME</a></li>
           <li><a href='#men'>MEN</a></li>
           <li><a>WOMEN</a></li>
           <li><a>BAGS</a></li>
