--- a/js/templates/AboutUsTemplate.html
+++ b/js/templates/AboutUsTemplate.html
@@ -1,7 +1,43 @@
-<div class='modal fade' id='modal-about'>
+<!--<div class='modal fade' id='modal-about'>
   <div class="span5 block-title"><hr /><h1>About<a class='close' data-dismiss='modal'>×</a></h1><hr /></div>
   <div class="span5">
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur..</p>
+  </div>
+</div>-->
+
+<div class='container'>
+  <div class='row'>
+    <span class='span12'>
+      <h2>About Us:</h2>
+      <p>VelocityTrendz is a fashion house specializing in contemporary menswear.  We are all about high quality customized services at competitive prices.</p>
+      <p>Our unique business model connects current fashion trends in US and Europe with premium manufacturing capabilities in Asia.</p>
+      <p>We have built a value chain around a skilled workforce in India and China and a distribution network to global brands and specialty retail stores.</p>
+      <p>We have a highly professional and experienced team of designers, merchandisers, quality and production personnel.  Essentially our team provides you a one-stop solution to garment production.</p>
+      <pOur offices are located in New York and New Delhi.</p>
+      <br/>
+      <h2>Services:</h2>
+      <p>We pride ourselves in providing world class customized services encompassing – design, sourcing, production, and price.</p>
+      <p><b>Design:</b>  At our core is a dedicated team of fashion designers, who bring multiple years of industry experience.   Our team is well-researched in various types of fabrics, current trends and forecasting and product development.  We have in-house expertise in technical sketches, tech-pack, and presentation boards.  We leverage this experience to arrange custom-made samples from our manufacturing hubs.</p>
+      <p><b>Sourcing:</b>  We provide a sophisticated market approach to achieve optimal sourcing outcomes.  We have a strong supply chain to source fabric directly from fabric manufacturers.  This helps us in further minimizing costs for our clients.</p>
+      <p><b>Production:</b>  Our manufacturing base in Asia has a strong track record in supplying high-quality clothing for over 15 years at competitive prices.  We have the flexibility to cater to both high volume and niche boutique product segments.</p>
+      <p>We are committed to:</p>
+      <ul>
+        <li>Optimal product development and sourcing</li>
+        <li>On time production and timely delivery</li>
+        <li>Quality assurance</li>
+        <li>Shipment and tracking</li>
+      </ul>
+      <br/>
+      <h2>Price:</h2>
+      <p>We operate across multiple price points – we will work with you to get the right value for your needs.</p>
+      <p>We welcome the opportunity to partner and build a lasting relationship with you.</p>
+      <br/>
+      <h2>Products:</h2>
+      <p>Our products include ready to wear fashion garments for men.  We are committed to create a fashion environment that helps our clients define their own individuality.</p>
+      <br/>
+      <h2>Customers:</h2>
+      <p>Our customers include specialty retail and department stores across the world.  We specialize in providing private label services for well-known global brands.</p>
+    </span>
   </div>
 </div>
