--- a/js/templates/FooterTemplate.html
+++ b/js/templates/FooterTemplate.html
@@ -6,12 +6,10 @@
           <a class='brand' href='index.html'>Velocity Trendz</a>
         </div>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi posuere nisl at eros accumsan ultrices.
-          Integer id justo mi. Sed eleifend dolor posuere justo dignissim rhoncus.
+          VelocityTrendz is a fashion house specializing in contemporary menswear.  We are all about high quality customized services at competitive prices.
         </p>
         <p>
-          Etiam rutrum orci nec sapien lobortis ac consectetur nisl laoreet. Duis egestas enim at ante dignissim
-          id elementum nisi convallis.
+          Our unique business model connects current fashion trends in US and Europe with premium manufacturing capabilities in Asia.
         </p>
       </div>
 
@@ -28,7 +26,7 @@
           <div class='contact address'>
             <img class='hidden-phone' src='img/house.png' alt='Contact Address'/>
             <div class='address'>
-              12 Sweet Street, <br /> Des Moines, IA
+              Our offices are <br/>located in New York<br/> and New Delhi.
             </div>
           </div>
         </div>
