--- a/js/templates/HeaderTemplate.html
+++ b/js/templates/HeaderTemplate.html
@@ -3,13 +3,10 @@
     <div class='span3'>
       <a href='#' style='font-size:36px'><img src='img/logo.jpg' width='220px' alt='img1' /></a>
     </div>
-    <div class='span9'>
+    <div class='span4'>
         <ul class='nav pull-right' id='header_menu'>
           <li><a href='#'>HOME</a></li>
-          <li><a href='#men'>MEN</a></li>
-          <li><a>WOMEN</a></li>
-          <li><a>BAGS</a></li>
-          <li><a>ACCESORIES</a></li>
+          <li><a href='#about'>ABOUT US</a></li>
         </ul>
     </div>
   </div>
