--- a/js/templates/HomeTemplate.html
+++ b/js/templates/HomeTemplate.html
@@ -4,25 +4,25 @@
     <div class='span4'>
       <div class='padding-wrapper'>
         <div id='camera_wrap' class='camera_wrap'>
-          <div data-src='img/slides/DSC_0.jpeg' data-thumb='img/slides/DSC_0.jpeg'>
+          <div data-src='img/slides/DSC_0.JPG' data-thumb='img/slides/DSC_0.JPG'>
             <div class='camera_caption'>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
           </div>
-          <div data-src='img/slides/DSC_1.jpeg' data-thumb='img/slides/DSC_1.jpeg'>
+          <div data-src='img/slides/DSC_1.JPG' data-thumb='img/slides/DSC_1.JPG'>
             <div class='camera_caption'>Donec tellus augue, varius nec malesuada ut, facilisis ac quam.</div>
           </div>
-          <div data-src='img/slides/DSC_2.jpeg' data-thumb='img/slides/DSC_2.jpeg'>
+          <div data-src='img/slides/DSC_2.JPG' data-thumb='img/slides/DSC_2.JPG'>
             <div class='camera_caption'>Nullam leo quam, aliquam vel egestas ac, ornare in augue.</div>
           </div>
-          <div data-src='img/slides/DSC_3.jpeg' data-thumb='img/slides/DSC_3.jpeg'>
+          <div data-src='img/slides/DSC_3.JPG' data-thumb='img/slides/DSC_3.JPG'>
             <div class='camera_caption'>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
           </div>
-          <div data-src='img/slides/DSC_4.jpeg' data-thumb='img/slides/DSC_4.jpeg'>
+          <div data-src='img/slides/DSC_4.JPG' data-thumb='img/slides/DSC_4.JPG'>
             <div class='camera_caption'>Donec tellus augue, varius nec malesuada ut, facilisis ac quam.</div>
           </div>
-          <div data-src='img/slides/DSC_5.jpeg' data-thumb='img/slides/DSC_5.jpeg'>
+          <div data-src='img/slides/DSC_5.JPG' data-thumb='img/slides/DSC_5.JPG'>
             <div class='camera_caption'>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
           </div>
-          <div data-src='img/slides/DSC_1.jpeg' data-thumb='img/slides/DSC_1.jpeg'>
+          <div data-src='img/slides/DSC_1.JPG' data-thumb='img/slides/DSC_1.JPG'>
             <div class='camera_caption'>Donec tellus augue, varius nec malesuada ut, facilisis ac quam.</div>
           </div>
         </div>
