--- a/js/templates/ProductTemplate.html
+++ b/js/templates/ProductTemplate.html
@@ -12,7 +12,7 @@
           </li>
 
           <li class='span2'>
-            <b>Related products:</b>
+            <b>Related Designs:</b>
             <li class='span2'>
               <a class='thumbnail'><img src={{related1}} /></a>
             </li>
