--- a/js/templates/GalleryTemplate.html
+++ b/js/templates/GalleryTemplate.html
@@ -4,7 +4,7 @@
 
       <li class='span3'>
         <div class='thumbnail'>
-          <img src="img/DSC_0.jpeg" />
+          <img src="img/DSC_0.JPG" />
           <div class='caption'>
             <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
@@ -14,7 +14,7 @@
 
       <li class='span3'>
         <div class='thumbnail'>
-          <img src="img/DSC_1.jpeg" />
+          <img src="img/DSC_1.JPG" />
           <div class='caption'>
             <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
@@ -24,7 +24,7 @@
 
       <li class='span3'>
         <div class='thumbnail'>
-          <img src="img/DSC_2.jpeg" />
+          <img src="img/DSC_2.JPG" />
           <div class='caption'>
             <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
@@ -34,7 +34,7 @@
 
       <li class='span3'>
         <div class='thumbnail'>
-          <img src="img/DSC_3.jpeg" />
+          <img src="img/DSC_3.JPG" />
           <div class='caption'>
             <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
@@ -46,7 +46,7 @@
     <ul class='thumbnails row' >
       <li class='span3'>
         <div class='thumbnail'>
-          <img src="img/DSC_4.jpeg" />
+          <img src="img/DSC_4.JPG" />
           <div class='caption'>
             <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
@@ -56,7 +56,7 @@
 
       <li class='span3'>
         <div class='thumbnail'>
-          <img src="img/DSC_5.jpeg" />
+          <img src="img/DSC_5.JPG" />
           <div class='caption'>
             <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
@@ -66,7 +66,7 @@
 
       <li class='span3'>
         <div class='thumbnail'>
-          <img src="img/DSC_3.jpeg" />
+          <img src="img/DSC_6.JPG" />
           <div class='caption'>
             <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
@@ -76,7 +76,91 @@
 
       <li class='span3'>
         <div class='thumbnail'>
-          <img src="img/DSC_4.jpeg" />
+          <img src="img/DSC_7.JPG" />
+          <div class='caption'>
+            <h5>Design label</h5>
+            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+          </div>
+        </div>
+      </li>
+    </ul>
+
+    <ul class='thumbnails row' >
+      <li class='span3'>
+        <div class='thumbnail'>
+          <img src="img/DSC_8.JPG" />
+          <div class='caption'>
+            <h5>Design label</h5>
+            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+          </div>
+        </div>
+      </li>
+
+      <li class='span3'>
+        <div class='thumbnail'>
+          <img src="img/DSC_9.JPG" />
+          <div class='caption'>
+            <h5>Design label</h5>
+            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+          </div>
+        </div>
+      </li>
+
+      <li class='span3'>
+        <div class='thumbnail'>
+          <img src="img/DSC_10.JPG" />
+          <div class='caption'>
+            <h5>Design label</h5>
+            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+          </div>
+        </div>
+      </li>
+
+      <li class='span3'>
+        <div class='thumbnail'>
+          <img src="img/DSC_11.JPG" />
+          <div class='caption'>
+            <h5>Design label</h5>
+            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+          </div>
+        </div>
+      </li>
+    </ul>
+
+    <ul class='thumbnails row' >
+      <li class='span3'>
+        <div class='thumbnail'>
+          <img src="img/DSC_12.JPG" />
+          <div class='caption'>
+            <h5>Design label</h5>
+            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+          </div>
+        </div>
+      </li>
+
+      <li class='span3'>
+        <div class='thumbnail'>
+          <img src="img/DSC_13.JPG" />
+          <div class='caption'>
+            <h5>Design label</h5>
+            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+          </div>
+        </div>
+      </li>
+
+      <li class='span3'>
+        <div class='thumbnail'>
+          <img src="img/DSC_14.JPG" />
+          <div class='caption'>
+            <h5>Design label</h5>
+            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+          </div>
+        </div>
+      </li>
+
+      <li class='span3'>
+        <div class='thumbnail'>
+          <img src="img/DSC_15.JPG" />
           <div class='caption'>
             <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
