--- a/js/templates/GalleryTemplate.html
+++ b/js/templates/GalleryTemplate.html
@@ -4,7 +4,18 @@
 
       <li class='span3'>
         <div class='thumbnail'>
-          <img src="img/DSC_0.JPG" />
+          <img src='img/DSC_0.JPG' />
+          <div class='caption'>
+            <p>STYLE #  VT 01313</p>
+            <p>COLOR # Smoke Blue / White</p>
+            <p>FAB -100% cotton</p>
+          </div>
+        </div>
+      </li>
+
+      <li class='span3'>
+        <div class='thumbnail'>
+          <img src='img/DSC_1.JPG' />
           <div class='caption'>
             <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
@@ -14,7 +25,7 @@
 
       <li class='span3'>
         <div class='thumbnail'>
-          <img src="img/DSC_1.JPG" />
+          <img src='img/DSC_2.JPG' />
           <div class='caption'>
             <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
@@ -24,17 +35,7 @@
 
       <li class='span3'>
         <div class='thumbnail'>
-          <img src="img/DSC_2.JPG" />
-          <div class='caption'>
-            <h5>Design label</h5>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-          </div>
-        </div>
-      </li>
-
-      <li class='span3'>
-        <div class='thumbnail'>
-          <img src="img/DSC_3.JPG" />
+          <img src='img/DSC_3.JPG' />
           <div class='caption'>
             <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
@@ -46,7 +47,7 @@
     <ul class='thumbnails row' >
       <li class='span3'>
         <div class='thumbnail'>
-          <img src="img/DSC_4.JPG" />
+          <img src='img/DSC_4.JPG' />
           <div class='caption'>
             <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
@@ -56,7 +57,7 @@
 
       <li class='span3'>
         <div class='thumbnail'>
-          <img src="img/DSC_5.JPG" />
+          <img src='img/DSC_5.JPG' />
           <div class='caption'>
             <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
@@ -66,7 +67,7 @@
 
       <li class='span3'>
         <div class='thumbnail'>
-          <img src="img/DSC_6.JPG" />
+          <img src='img/DSC_6.JPG' />
           <div class='caption'>
             <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
@@ -76,49 +77,7 @@
 
       <li class='span3'>
         <div class='thumbnail'>
-          <img src="img/DSC_7.JPG" />
-          <div class='caption'>
-            <h5>Design label</h5>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-          </div>
-        </div>
-      </li>
-    </ul>
-
-    <ul class='thumbnails row' >
-      <li class='span3'>
-        <div class='thumbnail'>
-          <img src="img/DSC_8.JPG" />
-          <div class='caption'>
-            <h5>Design label</h5>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-          </div>
-        </div>
-      </li>
-
-      <li class='span3'>
-        <div class='thumbnail'>
-          <img src="img/DSC_9.JPG" />
-          <div class='caption'>
-            <h5>Design label</h5>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-          </div>
-        </div>
-      </li>
-
-      <li class='span3'>
-        <div class='thumbnail'>
-          <img src="img/DSC_10.JPG" />
-          <div class='caption'>
-            <h5>Design label</h5>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-          </div>
-        </div>
-      </li>
-
-      <li class='span3'>
-        <div class='thumbnail'>
-          <img src="img/DSC_11.JPG" />
+          <img src='img/DSC_7.JPG' />
           <div class='caption'>
             <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
@@ -130,7 +89,7 @@
     <ul class='thumbnails row' >
       <li class='span3'>
         <div class='thumbnail'>
-          <img src="img/DSC_12.JPG" />
+          <img src='img/DSC_8.JPG' />
           <div class='caption'>
             <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
@@ -140,7 +99,7 @@
 
       <li class='span3'>
         <div class='thumbnail'>
-          <img src="img/DSC_13.JPG" />
+          <img src='img/DSC_9.JPG' />
           <div class='caption'>
             <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
@@ -150,7 +109,7 @@
 
       <li class='span3'>
         <div class='thumbnail'>
-          <img src="img/DSC_14.JPG" />
+          <img src='img/DSC_10.JPG' />
           <div class='caption'>
             <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
@@ -160,7 +119,49 @@
 
       <li class='span3'>
         <div class='thumbnail'>
-          <img src="img/DSC_15.JPG" />
+          <img src='img/DSC_11.JPG' />
+          <div class='caption'>
+            <h5>Design label</h5>
+            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+          </div>
+        </div>
+      </li>
+    </ul>
+
+    <ul class='thumbnails row' >
+      <li class='span3'>
+        <div class='thumbnail'>
+          <img src='img/DSC_12.JPG' />
+          <div class='caption'>
+            <h5>Design label</h5>
+            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+          </div>
+        </div>
+      </li>
+
+      <li class='span3'>
+        <div class='thumbnail'>
+          <img src='img/DSC_13.JPG' />
+          <div class='caption'>
+            <h5>Design label</h5>
+            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+          </div>
+        </div>
+      </li>
+
+      <li class='span3'>
+        <div class='thumbnail'>
+          <img src='img/DSC_14.JPG' />
+          <div class='caption'>
+            <h5>Design label</h5>
+            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+          </div>
+        </div>
+      </li>
+
+      <li class='span3'>
+        <div class='thumbnail'>
+          <img src='img/DSC_15.JPG' />
           <div class='caption'>
             <h5>Design label</h5>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
