--- a/js/templates/GalleryTemplate.html
+++ b/js/templates/GalleryTemplate.html
@@ -6,9 +6,9 @@
         <div class='thumbnail'>
           <img src='img/DSC_0.JPG' />
           <div class='caption'>
-            <p>STYLE #  VT 01313</p>
-            <p>COLOR # Smoke Blue / White</p>
-            <p>FAB -100% cotton</p>
+            <p><span class='property'>Style</span> VT 01313</p>
+            <p><span class='property'>Color</span> Smoke Blue / White</p>
+            <p><span class='property'>Fabric</span> 100% cotton</p>
           </div>
         </div>
       </li>
