--- a/css/default.css
+++ b/css/default.css
@@ -230,6 +230,16 @@ body
 {
   color: #666666;
   font-size: 12px;
+  text-transform: uppercase;
+}
+
+.caption p .property
+{
+  width: 50px;
+  float: left;
+  padding-left: 5px;
+  color: black;
+  text-transform: uppercase;
 }
 
 .caption strong
