updated descriptions and removed placeholder txt in product template

--- a/js/templates/GalleryTemplate.html
+++ b/js/templates/GalleryTemplate.html
@@ -17,8 +17,9 @@
         <div class='thumbnail'>
           <img src='img/DSC_1.JPG' />
           <div class='caption'>
-            <h5>Design label</h5>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+            <p><span class='property'>Style</span> VT 01321</p>
+            <p><span class='property'>Color</span> Rose / White</p>
+            <p><span class='property'>Fabric</span> 100% cotton</p>
           </div>
         </div>
       </li>
@@ -27,8 +28,9 @@
         <div class='thumbnail'>
           <img src='img/DSC_2.JPG' />
           <div class='caption'>
-            <h5>Design label</h5>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+            <p><span class='property'>Style</span> VT 01305</p>
+            <p><span class='property'>Color</span> Wild Green</p>
+            <p><span class='property'>Fabric</span> 100% cotton</p>
           </div>
         </div>
       </li>
@@ -37,8 +39,9 @@
         <div class='thumbnail'>
           <img src='img/DSC_3.JPG' />
           <div class='caption'>
-            <h5>Design label</h5>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+            <p><span class='property'>Style</span> VT 01319-2</p>
+            <p><span class='property'>Color</span> Ultra Marine/ White</p>
+            <p><span class='property'>Fabric</span> 100% cotton</p>
           </div>
         </div>
       </li>
@@ -49,8 +52,9 @@
         <div class='thumbnail'>
           <img src='img/DSC_4.JPG' />
           <div class='caption'>
-            <h5>Design label</h5>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+            <p><span class='property'>Style</span> VT 01302</p>
+            <p><span class='property'>Color</span> Tiffany Blue / White</p>
+            <p><span class='property'>Fabric</span> 100% cotton</p>
           </div>
         </div>
       </li>
@@ -59,8 +63,9 @@
         <div class='thumbnail'>
           <img src='img/DSC_5.JPG' />
           <div class='caption'>
-            <h5>Design label</h5>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+            <p><span class='property'>Style</span> VT 01327</p>
+            <p><span class='property'>Color</span> Periwinkle Blue / White</p>
+            <p><span class='property'>Fabric</span> 100% cotton</p>
           </div>
         </div>
       </li>
@@ -69,8 +74,9 @@
         <div class='thumbnail'>
           <img src='img/DSC_6.JPG' />
           <div class='caption'>
-            <h5>Design label</h5>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+            <p><span class='property'>Style</span> VT 01309</p>
+            <p><span class='property'>Color</span> Orchid / Black</p>
+            <p><span class='property'>Fabric</span> 100% cotton</p>
           </div>
         </div>
       </li>
@@ -79,30 +85,23 @@
         <div class='thumbnail'>
           <img src='img/DSC_7.JPG' />
           <div class='caption'>
-            <h5>Design label</h5>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+            <p><span class='property'>Style</span> VT 01329</p>
+            <p><span class='property'>Color</span> Midnight Blue / White</p>
+            <p><span class='property'>Fabric</span> 100% cotton</p>
           </div>
         </div>
       </li>
     </ul>
 
     <ul class='thumbnails row' >
-      <li class='span3'>
-        <div class='thumbnail'>
-          <img src='img/DSC_8.JPG' />
-          <div class='caption'>
-            <h5>Design label</h5>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-          </div>
-        </div>
-      </li>
 
       <li class='span3'>
         <div class='thumbnail'>
           <img src='img/DSC_9.JPG' />
           <div class='caption'>
-            <h5>Design label</h5>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+            <p><span class='property'>Style</span> VT 01320-1</p>
+            <p><span class='property'>Color</span> Pea Green / Muted Blue</p>
+            <p><span class='property'>Fabric</span> 100% cotton</p>
           </div>
         </div>
       </li>
@@ -111,8 +110,9 @@
         <div class='thumbnail'>
           <img src='img/DSC_10.JPG' />
           <div class='caption'>
-            <h5>Design label</h5>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+            <p><span class='property'>Style</span> VT 01324</p>
+            <p><span class='property'>Color</span> Cloudy Blue</p>
+            <p><span class='property'>Fabric</span> 100% cotton</p>
           </div>
         </div>
       </li>
@@ -121,30 +121,35 @@
         <div class='thumbnail'>
           <img src='img/DSC_11.JPG' />
           <div class='caption'>
-            <h5>Design label</h5>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+            <p><span class='property'>Style</span> VT 01315</p>
+            <p><span class='property'>Color</span> Dusky Pink / White</p>
+            <p><span class='property'>Fabric</span> 100% cotton</p>
+          </div>
+        </div>
+      </li>
+
+      <li class='span3'>
+        <div class='thumbnail'>
+          <img src='img/DSC_12.JPG' />
+          <div class='caption'>
+            <p><span class='property'>Style</span> VT 01326, VT 01308</p>
+            <p><span class='property'>Color</span> Merlot, Blue / Red</p>
+            <p><span class='property'>Fabric</span> 100% cotton</p>
           </div>
         </div>
       </li>
     </ul>
 
     <ul class='thumbnails row' >
-      <li class='span3'>
-        <div class='thumbnail'>
-          <img src='img/DSC_12.JPG' />
-          <div class='caption'>
-            <h5>Design label</h5>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-          </div>
-        </div>
-      </li>
+
 
       <li class='span3'>
         <div class='thumbnail'>
           <img src='img/DSC_13.JPG' />
           <div class='caption'>
-            <h5>Design label</h5>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+            <p><span class='property'>Style</span> VT 01316</p>
+            <p><span class='property'>Color</span> Wine Red</p>
+            <p><span class='property'>Fabric</span> 100% cotton</p>
           </div>
         </div>
       </li>
@@ -153,8 +158,9 @@
         <div class='thumbnail'>
           <img src='img/DSC_14.JPG' />
           <div class='caption'>
-            <h5>Design label</h5>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+            <p><span class='property'>Style</span> VT 01312</p>
+            <p><span class='property'>Color</span> Ice Blue / White</p>
+            <p><span class='property'>Fabric</span> 100% cotton</p>
           </div>
         </div>
       </li>
@@ -163,8 +169,9 @@
         <div class='thumbnail'>
           <img src='img/DSC_15.JPG' />
           <div class='caption'>
-            <h5>Design label</h5>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+            <p><span class='property'>Style</span> VT 01324</p>
+            <p><span class='property'>Color</span> Cloudy Blue</p>
+            <p><span class='property'>Fabric</span> 100% cotton</p>
           </div>
         </div>
       </li>
